added triangle and updates